fixing add button alignment

--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 200px;
+  min-height: 280px;
   width: 200px;
   grid-column: 1;
 }
